Added Cyber Threat Intelligence Reports Button.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
         </div>
 
         <div class="information">
-            <div class="contact">
-                <p>Reach out to<br><a href="mailto:info@signalzero.in">info@signalzero.in</a><br>for more information.</p>
-            </div>
-            <div class="careers">
-                <p>We are hiring!<br>Share your profile at <a href="mailto:careers@signalzero.in">careers@signalzero.in</a><br>for opportunities with us.</p>
-            </div>
+            <a href="https://github.com/SignalZeroInt/Anonymous-Sudan/raw/main/Anonymous%20Sudan%20-%20Cyber%20Threat%20Intelligence%20Report%20-%20SignalZero.pdf" target="_blank"><button><b>Cyber Threat Intelligence Reports</b></button></a>
         </div>
 
     </body>
