page for privacy policy

--- a/index.html
+++ b/index.html
@@ -2,40 +2,44 @@
 
 <html>
 
-    <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HXED581Y"></script>
-        <script>
+<head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HXED581Y"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-F2HXED581Y');
-        </script>
-        <title>SignalZero</title>
-                
-        <link rel="stylesheet" href="static/index.css">
-        <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon" >
+    </script>
+    <title>SignalZero</title>
 
-    </head>
+    <link rel="stylesheet" href="static/index.css">
+    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
 
-    <body>
+</head>
 
-        <div class="banner">
-            <img src="./static/images/logo.png" class="logo" alt="SignalZero">
+<body>
+
+    <div class="banner">
+        <img src="./static/images/logo.png" class="logo" alt="SignalZero">
+    </div>
+
+    <div class="introduction">
+        <p>
+            We specialize in providing unparalleled security solutions to safeguard businesses and organizations against
+            cyber attacks. We track and analyze cyber threats, providing real-time intelligence and actionable insights
+            to our clients.
+        </p>
+    </div>
+
+    <div class="information">
+        <div class="careers">
+            <p>We are hiring!<br>Share your profile at <a
+                    href="mailto:careers@signalzero.in">careers@signalzero.in</a><br>for opportunities with us.</p>
         </div>
+    </div>
+    </div>
 
-        <div class="introduction">
-            <p>
-                We specialize in providing unparalleled security solutions to safeguard businesses and organizations against cyber attacks. We track and analyze cyber threats, providing real-time intelligence and actionable insights to our clients.
-            </p>
-        </div>
-
-        <div class="information">
-            <div class="careers">
-                <p>We are hiring!<br>Share your profile at <a href="mailto:careers@signalzero.in">careers@signalzero.in</a><br>for opportunities with us.</p>
-            </div>
-        </div>
-
-    </body>
+</body>
 
 </html>
