get button removed

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,10 +34,10 @@
                 </div>
             </div>
         </div>
-        <div class="bannerRight">
+        <!-- <div class="bannerRight">
             <button class="getBtn">GET <img src="./static/images/get.svg" alt="get" class="getIcon"></button>
             <div class="btnDetail">Compatible with your browser</div>
-        </div>
+        </div> -->
     </div>
     <hr class="division">
     <div class="information">
