name change in header

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,7 @@
             <img src="./static/images/extension.svg" class="icon" alt="Infinity">
             <div class="title">
                 <div class="heading">
-                    INFINITY ENHANCED SECURITY PLUG-IN
+                    SignalZero ENHANCED SECURITY PLUG-IN
                 </div>
                 <div class="description">
                     Threat Detection and Browser Security
